# course_work_3

./: .gitignore  README.md  pyproject.toml
functions/: main.py  utils.py
test/: conftest.py  test_operations.json  test_utils.py
